# esharp-accordion-projects-webapiclient-python

./: .gitignore  README.md  TESTING_README.md  WebApiClient.Python.csproj  mkdocs.yml  publish-python-package.ps1  pyproject.toml
accordionq2/: __init__.py  _base.py  application.py  channels.py  client.py  comm.py  connection.py  enums.py  exceptions.py  media.py  models.py  modules.py  numeric_results.py  resources.py
docs/: dotnet-comparison.md  error-handling.md  index.md  testing.md
docs/api/: application.md  channels.md  comm.md  connection.md  media.md  modules.md  numeric-results.md  overview.md  resources.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: enums.md  models.md
tests/: conftest.py  test_application.py  test_channels.py  test_comm.py  test_connection.py  test_media.py  test_modules.py  test_numeric_results.py  test_performance.py  test_resources.py
