[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "accordionq2"
version = "1.1.0"
description = "Python client for the AccordionQ2 Hardware Management REST API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [{name = "eSharp AB"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/esharpab/esharp-accordion-projects-webapiclient-python"
Documentation = "https://esharp-accordion-projects-webapiclient-python.readthedocs.io/en/latest/"
PyPI = "https://pypi.org/project/accordionq2/"
"NuGet (.NET)" = "https://www.nuget.org/packages/AccordionQ2.WebApiClient/"

[project.optional-dependencies]
dev = ["pytest>=7"]
docs = ["mkdocs-material>=9.0"]

[tool.setuptools.packages.find]
include = ["accordionq2*"]

[tool.pytest.ini_options]
markers = ["integration: marks tests as integration tests (require hardware)", "performance: marks throughput/latency benchmarks (require hardware)"]
